Fixes overflow on revealOverset

--- a/src/components/search/styles.scss
+++ b/src/components/search/styles.scss
@@ -108,6 +108,7 @@
     }
     :global(.selectr-selected){ 
         overflow-x:visible;
+        overflow-y: visible;
     }
     .searchContainer {
         box-shadow: 1px 2px 2px rgba(0, 0, 0, 0.5);
